# YouTube-Niche-Discovery-Algorithm

./: .env.example  .gitignore  ARCHITECTURE.md  README.md  animal_hospital_roblox_dashboard.html  animal_hospital_roblox_graph.html  app.py  channel_stats.json  cluster_report.json  create_shortcut.py  dashboard.html  graph_7plus7.html  graph_expanded.html  graph_filtered.html  index.html  niche_wordcloud.html  pyproject.toml  requirements.txt  server.py  socialblade_data.json  topic_dashboard.html  topic_graph.html
docs/: niche_wordcloud.html
docs/superpowers/plans/: 2026-05-26-youtube-niche-finder.md  2026-05-28-channel-niche-concepts.md
scripts/: regenerate_wordcloud.py  renumber_niches.py  run-and-deploy.sh  test_shorts.py
src/: __init__.py  _patched.py  _token.py  cli.py  config.py  innertube.py  models.py  shorts_verifier.py
src/analysis/: community.py  metrics.py  propagator.py
src/collector/: collector.py
src/errors/: recorder.py
src/growth_analyzer/: metrics.py  report.py  researcher_report.py  socialblade.py
src/output/: formatter.py
src/socialblade/: crawler.py
templates/: analyzer.html  base.html  niche_detail.html  researcher.html
tests/: test_collector.py  test_community.py  test_formatter.py  test_metrics.py  test_propagator.py
tests/fixtures/: sample_search.json
